Préparation pour le feat #211 https://github.com/vzwingma/gestion-budget-ihm/issues/211